package fr.iut.cctweaked.model.enums;

public enum SupplierState {
    ON, OFF, PAUSE
}
